Combining creature and PC elements into one container to allow creatures to overlap dead PCs; fixing getAllCharactersPos to allow option to include dead PCs for calculating lighting

--- a/client/src/css/creatures.css
+++ b/client/src/css/creatures.css
@@ -3,6 +3,7 @@
 	transition: transform 0.5s;
 	user-select: none;
 	filter: drop-shadow(4px 4px 2px black);
+	z-index: 1;
 }
 
 .creature.dead {
